<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:weightSum="1"
    android:orientation="vertical"
    android:id="@+id/layout_main"
    android:background="@drawable/gradation_login"
    tools:context=".activity.LoginActivity">

    <View
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.4"/>

    <ImageView
        android:layout_width="200dp"
        android:layout_height="125dp"
        android:src="@drawable/logo"
        android:layout_gravity="center"/>
    <View
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.1"/>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/layout_login_google"
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:layout_marginLeft="60dp"
        android:layout_marginRight="60dp"
        android:layout_marginTop="10dp"
        android:background="@drawable/roundspace_red">

        <ImageView
            android:layout_width="45dp"
            android:layout_height="match_parent"
            android:layout_marginLeft="20dp"
            android:padding="11dp"
            android:src="@drawable/logo_google"
            app:layout_constraintLeft_toLeftOf="parent"
            tools:layout_editor_absoluteY="0dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/google_login"
            android:textSize="@dimen/size_btn_small"
            android:fontFamily="@font/spoqa_regular"
            android:layout_gravity="center"
            android:textColor="@color/colorWhite"
            android:gravity="center_vertical"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"/>
    </androidx.constraintlayout.widget.ConstraintLayout>
    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/layout_login_facebook"
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:layout_marginLeft="60dp"
        android:layout_marginRight="60dp"
        android:layout_marginTop="15dp"
        android:gravity="center"
        android:background="@drawable/roundspace_blue">
        <ImageView
            android:layout_width="45dp"
            android:layout_height="match_parent"
            android:src="@drawable/logo_facebook"
            android:layout_marginLeft="20dp"
            app:layout_constraintLeft_toLeftOf="parent"
            android:padding="11dp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:gravity="center_vertical"
            android:text="@string/facebook_login"
            android:textColor="@color/colorWhite"
            android:textSize="@dimen/size_btn_small"
            android:fontFamily="@font/spoqa_regular"
            app:layout_constraintHorizontal_bias="0.502"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            tools:layout_editor_absoluteY="0dp" />
    </androidx.constraintlayout.widget.ConstraintLayout>
    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/layout_login_naver"
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:layout_marginLeft="60dp"
        android:layout_marginRight="60dp"
        android:layout_marginTop="15dp"
        android:background="@drawable/roundspace_green"
        android:gravity="center">
        <ImageView
            android:layout_width="45dp"
            android:layout_height="match_parent"
            android:src="@drawable/logo_naver"
            android:layout_marginLeft="20dp"
            app:layout_constraintLeft_toLeftOf="parent"
            android:padding="10dp"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/naver_login"
            android:textSize="@dimen/size_btn_small"
            android:fontFamily="@font/spoqa_regular"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            android:textColor="@color/colorWhite"
            android:gravity="center_vertical"/>
    </androidx.constraintlayout.widget.ConstraintLayout>
    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/layout_login_kakao"
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:layout_marginLeft="60dp"
        android:layout_marginRight="60dp"
        android:layout_marginTop="15dp"
        android:background="@drawable/roundspace_yellow"
        android:gravity="center">
        <ImageView
            android:layout_width="45dp"
            android:layout_height="match_parent"
            android:src="@drawable/logo_kakao"
            android:layout_marginLeft="20dp"
            app:layout_constraintLeft_toLeftOf="parent"
            android:padding="9dp"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginLeft="5dp"
            android:gravity="center_vertical"
            android:text="@string/kakao_login"
            android:textSize="@dimen/size_btn_small"
            android:fontFamily="@font/spoqa_regular"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            android:textColor="@color/colorBlack" />
    </androidx.constraintlayout.widget.ConstraintLayout>
    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/layout_login_phonenum"
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:layout_marginLeft="60dp"
        android:layout_marginRight="60dp"
        android:layout_marginTop="15dp"
        android:layout_marginBottom="10dp"
        android:background="@drawable/roundspace_whtie"
        android:gravity="center">
        <ImageView
            android:layout_width="45dp"
            android:layout_height="match_parent"
            android:src="@drawable/phone"
            android:layout_marginLeft="20dp"
            app:layout_constraintLeft_toLeftOf="parent"
            android:padding="10dp"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginLeft="5dp"
            android:gravity="center_vertical"
            android:text="@string/phonenum_login"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            android:textColor="@color/colorBlack"
            android:textSize="@dimen/size_btn_small"
            android:fontFamily="@font/spoqa_regular"/>
    </androidx.constraintlayout.widget.ConstraintLayout>
    <View
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.07"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/rights"
        android:textSize="10sp"
        android:textColor="@color/colorGray5"
        android:fontFamily="@font/spoqa_regular"
        android:layout_marginTop="20dp"/>

</androidx.appcompat.widget.LinearLayoutCompat>