<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:id="@+id/layout_main"
    android:weightSum="1"
    android:background="@color/colorWhite"
    tools:context=".activity.JoinSMScodeActivity">

    <ImageView
        android:id="@+id/image_back"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:src="@drawable/leftarrow"
        android:background="?attr/selectableItemBackground"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="10dp"/>

    <View
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.2"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/enter_code"
        android:layout_gravity="center"
        android:fontFamily="@font/spoqa_bold"
        android:textSize="@dimen/size_title"
        android:textColor="@color/colorGray5"/>
    <View
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.1"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center">

        <EditText
            android:id="@+id/edit_code1"
            android:layout_width="43.5dp"
            android:layout_height="43.5dp"
            android:layout_gravity="center"
            android:layout_marginLeft="2.5dp"
            android:layout_marginRight="2.5dp"
            android:background="@drawable/roundspace_box_gray"
            android:cursorVisible="false"
            android:gravity="center"
            android:inputType="number"
            android:maxEms="1"
            android:maxLength="1"
            android:maxLines="1"
            android:paddingLeft="10sp"
            android:paddingRight="10sp"
            android:fontFamily="@font/spoqa_bold"
            android:textColor="@color/colorBlack"
            android:textCursorDrawable="@drawable/cursor_color"
            android:textSize="20dp" />
        <EditText
            android:id="@+id/edit_code2"
            android:layout_width="43.5dp"
            android:layout_height="43.5dp"
            android:layout_gravity="center"
            android:layout_marginLeft="2.5dp"
            android:layout_marginRight="2.5dp"
            android:background="@drawable/roundspace_box_gray"
            android:cursorVisible="false"
            android:gravity="center"
            android:inputType="number"
            android:maxEms="1"
            android:maxLength="1"
            android:maxLines="1"
            android:paddingLeft="10sp"
            android:paddingRight="10sp"
            android:fontFamily="@font/spoqa_bold"
            android:textColor="@color/colorBlack"
            android:textCursorDrawable="@drawable/cursor_color"
            android:textSize="20dp" />

        <EditText
            android:id="@+id/edit_code3"
            android:layout_width="43.5dp"
            android:layout_height="43.5dp"
            android:layout_gravity="center"
            android:layout_marginLeft="2.5dp"
            android:layout_marginRight="2.5dp"
            android:background="@drawable/roundspace_box_gray"
            android:cursorVisible="false"
            android:gravity="center"
            android:inputType="number"
            android:maxEms="1"
            android:maxLength="1"
            android:maxLines="1"
            android:paddingLeft="10sp"
            android:paddingRight="10sp"
            android:fontFamily="@font/spoqa_bold"
            android:textColor="@color/colorBlack"
            android:textCursorDrawable="@drawable/cursor_color"
            android:textSize="20dp" />
        <EditText
            android:id="@+id/edit_code4"
            android:layout_width="43.5dp"
            android:layout_height="43.5dp"
            android:layout_gravity="center"
            android:layout_marginLeft="2.5dp"
            android:layout_marginRight="2.5dp"
            android:background="@drawable/roundspace_box_gray"
            android:cursorVisible="false"
            android:gravity="center"
            android:inputType="number"
            android:maxEms="1"
            android:maxLength="1"
            android:maxLines="1"
            android:paddingLeft="10sp"
            android:paddingRight="10sp"
            android:fontFamily="@font/spoqa_bold"
            android:textColor="@color/colorBlack"
            android:textCursorDrawable="@drawable/cursor_color"
            android:textSize="20dp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="20dp"
        android:orientation="vertical"
        android:layout_marginTop="5dp"
        android:layout_marginLeft="25dp"
        android:layout_marginRight="25dp">
        <TextView
            android:id="@+id/text_errormsg"
            android:visibility="gone"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/not_match_code"
            android:fontFamily="@font/spoqa_regular"
            android:layout_gravity="center"
            android:textSize="@dimen/size_error_text"
            android:textColor="@color/colorRed"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="10dp"
        android:gravity="center">
        <TextView
            android:id="@+id/text_over"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/time_remaining"
            android:fontFamily="@font/spoqa_regular"
            android:textSize="@dimen/size_text_small"
            android:textColor="@color/colorGray7"/>
        <TextView
            android:id="@+id/text_overtime"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="00:00"
            android:fontFamily="@font/spoqa_regular"
            android:textSize="@dimen/size_text_small"
            android:textColor="@color/colorGray7"
            android:layout_gravity="center"
            android:layout_marginLeft="10dp"/>
    </LinearLayout>
    <View
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.1"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="10dp"
        android:gravity="center">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/not_receive_code"
            android:textSize="@dimen/size_text_small_2"
            android:fontFamily="@font/spoqa_regular"
            android:textColor="@color/colorGray5"/>

        <TextView
            android:id="@+id/text_retransmission_code"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/retransmission_code"
            android:textSize="@dimen/size_text_small_2"
            android:fontFamily="@font/spoqa_regular"
            android:layout_marginLeft="10dp"
            android:textColor="@color/colorBlue3"/>
    </LinearLayout>
</androidx.appcompat.widget.LinearLayoutCompat>